# internal/handlers/handlers.go
@@ -1,15 +1,19 @@
 package handlers
 
 import (
+	"context"
 	"database/sql"
 	"encoding/json"
 	"io"
 	"net/http"
+	"strconv"
 	"time"
 
 	"avitoBootcamp/internal/queries"
 
 	"github.com/golang-jwt/jwt/v4"
+	"github.com/gorilla/mux"
+	_ "github.com/lib/pq"
 )
 
 const jwtKey string = `B2iDZ6286IOLg8O1/f81Zdzh1BglfKTdLVw6twOqZGs=`
@@ -38,6 +42,7 @@ type Flat struct {
 	Price   int64  `json:"price"`
 	Rooms   int    `json:"rooms"`
 	Status  string `json:"status"`
+	Num     int    `json:"flat_num"`
 }
 
 func DummyLoginHandler(w http.ResponseWriter, r *http.Request) {
@@ -57,9 +62,9 @@ func DummyLoginHandler(w http.ResponseWriter, r *http.Request) {
 	}
 
 	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
-	tokenStr, err := token.SignedString(jwtKey)
+	tokenStr, err := token.SignedString([]byte(jwtKey))
 	if err != nil {
-		http.Error(w, "Could not create token", http.StatusInternalServerError)
+		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
@@ -75,11 +80,11 @@ func AuthorizationMiddleware(next http.Handler, onlyModerator bool) http.Handler
 		claims := &CustomClaims{}
 
 		token, err := jwt.ParseWithClaims(tokenStr, claims, func(t *jwt.Token) (interface{}, error) {
-			return jwtKey, nil
+			return []byte(jwtKey), nil
 		})
 
 		if err != nil || !token.Valid {
-			http.Error(w, "User unauthorized", http.StatusUnauthorized)
+			http.Error(w, err.Error(), http.StatusUnauthorized)
 			return
 		}
 
@@ -88,7 +93,9 @@ func AuthorizationMiddleware(next http.Handler, onlyModerator bool) http.Handler
 			return
 		}
 
-		next.ServeHTTP(w, r)
+		ctx := context.WithValue(r.Context(), `userType`, claims.Type)
+
+		next.ServeHTTP(w, r.WithContext(ctx))
 	})
 }
 
@@ -142,6 +149,8 @@ func FlatCreateHandler(db *sql.DB) http.Handler {
 			return
 		}
 
+		defer r.Body.Close()
+
 		if err := json.Unmarshal(body, &flat); err != nil {
 			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
@@ -149,7 +158,52 @@ func FlatCreateHandler(db *sql.DB) http.Handler {
 
 		flat.Status = `created`
 
-		if err := queries.Insert(db, &flat, `flat`); err != nil {
+		query := `INSERT INTO flat (house_id, price, rooms, flat_num, status) 
+		VALUES($1, $2, $3, $4, $5) RETURNING id`
+
+		if err := db.QueryRow(query, flat.HouseId, flat.Price, flat.Rooms, flat.Num, flat.Status).Scan(&flat.Id); err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		jsonResponse, err := json.Marshal(flat)
+
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		if err := queries.UpdateAtHouse(db, flat.HouseId); err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		w.Header().Set(`Content-Type`, `application/json`)
+		w.WriteHeader(http.StatusOK)
+		w.Write(jsonResponse)
+	})
+}
+
+func FlatUpdateHandler(db *sql.DB) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		body, err := io.ReadAll(r.Body)
+		var flat Flat
+
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+
+		defer r.Body.Close()
+
+		if err := json.Unmarshal(body, &flat); err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+
+		query := `UPDATE flat SET status = $1 WHERE id = $2 RETURNING price, rooms, house_id, flat_num`
+
+		if err := db.QueryRow(query, flat.Status, flat.Id).Scan(&flat.Price, &flat.Rooms, &flat.HouseId, &flat.Num); err != nil {
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 			return
 		}
@@ -164,5 +218,61 @@ func FlatCreateHandler(db *sql.DB) http.Handler {
 		w.Header().Set(`Content-Type`, `application/json`)
 		w.WriteHeader(http.StatusOK)
 		w.Write(jsonResponse)
+	})
+}
+
+func GetFlatsInHouseHandler(db *sql.DB) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		parameters := mux.Vars(r)
+
+		houseId, err := strconv.ParseInt(parameters[`id`], 10, 64)
+
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+
+		userType, ok := r.Context().Value(`userType`).(string)
+
+		if !ok {
+			http.Error(w, `could not get a user type`, http.StatusInternalServerError)
+			return
+		}
+
+		query := `SELECT id, house_id, price, rooms, status, flat_num FROM flat  WHERE house_id = $1 `
+
+		if userType != `moderator` {
+			query += ` AND status = 'approved'`
+		}
+
+		rows, err := db.Query(query, houseId)
+
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		defer rows.Close()
+
+		var flats []Flat
+
+		for rows.Next() {
+			var currFlat Flat
+
+			if err := rows.Scan(&currFlat.Id, &currFlat.HouseId, &currFlat.Price, &currFlat.Rooms, &currFlat.Status, &currFlat.Num); err != nil {
+				http.Error(w, err.Error(), http.StatusInternalServerError)
+				return
+			}
+
+			flats = append(flats, currFlat)
+		}
+
+		w.Header().Set(`Content-Type`, `application/json`)
+		w.WriteHeader(http.StatusOK)
+
+		if err := json.NewEncoder(w).Encode(flats); err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
 	})
 }
